fixed ui and ux on mobile

--- a/static/styles/login.css
+++ b/static/styles/login.css
@@ -7,29 +7,33 @@ main {
     flex-direction: column;
     background-color: var(--theme-color);
     color: white;
-
-    & h1 {
-        font-size: 3em;
-    }
-    & form {
-        display: flex;
-        flex-direction: column;
-        font-size: 2em;
-        & label {
-            gap: 0.5em;
+    & div {
+        & h1 {
+            font-size: 3em;
+            margin-top: 0;
+        }
+        & form {
             display: flex;
-            align-items: center;
-
+            flex-direction: column;
+            font-size: 2em;
+            & label {
+                gap: 0.5em;
+                display: flex;
+                align-items: center;
+            }
+            & input {
+                /* height: 100%; */
+                /* font-size: 1.1em; */
+            }
+            & button {
+                margin-top: 2em;
+                /* height: 2em; */
+                /* aspect-ratio: 1/2; */
+                /* font-size: 1.1em; */
+            }
         }
-        & input {
-            height: 100%;
-            font-size: 1.1em;
-        }
-        & button {
-            margin-top: 2em;
-            height: 2em;
-            aspect-ratio: 1/2;
-            font-size: 1.1em;
+        & a {
+            color: white;
         }
     }
 }
